force-app/main/default/objects/GPMS_Service_Funding__c/GPMS_Service_Funding__c.object-meta.xml
<CustomObject>
    <label>Service Funding</label>
    <nameField>
        <displayFormat>SVF-{0000000}</displayFormat>
        <label>Service Funding</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Funding</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>