force-app/main/default/objects/GPMS_Service_Funding__c/fields/AN_ACC_Base_Care_Tariff__c.field-meta.xml
<CustomField>
    <fullName>AN_ACC_Base_Care_Tariff__c</fullName>
    <description>System calculated AN-ACC BCT number, from MMM classification (from CGIS geocoding) and Special Purpose (indigenous and Homeless Specialisation).</description>
    <label>AN-ACC Base Care Tariff</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>