force-app/main/default/objects/GPMS_Service_Funding__c/fields/LegacyCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>LegacyCreatedDate__c</fullName>
    <description>For data migration purpose.</description>
    <label>Legacy Created Date</label>
    <type>DateTime</type>
</CustomField>