force-app/main/default/objects/GPMS_Service_Funding__c/fields/LegacyModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>LegacyModifiedBy__c</fullName>
    <description>For data migration purpose.</description>
    <label>Legacy Modified By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>