force-app/main/default/objects/GPMS_Service_Funding__c/fields/LegacyModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LegacyModifiedDate__c</fullName>
    <description>For data migration purpose.</description>
    <label>Legacy Modified Date</label>
    <type>DateTime</type>
</CustomField>