force-app/main/default/objects/GPMS_Service_Funding__c/fields/Number_of_Places__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Places__c</fullName>
    <description>Details number of funded places in the program</description>
    <label>Number of Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>