force-app/main/default/objects/GPMS_Service_Funding__c/fields/SDC_Program_Status__c.field-meta.xml
<CustomField>
    <fullName>SDC_Program_Status__c</fullName>
    <formula>if(Start_Date__c &gt; Today(),&quot;Future&quot;,if(End_Date__c &lt; Today(),&quot;Past&quot;,&quot;Current&quot;))</formula>
    <label>SDC Program Status</label>
    <type>Text</type>
</CustomField>