force-app/main/default/objects/GPMS_Service_Funding__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link Service with Service Funding records</description>
    <label>Service</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Service Funding</relationshipLabel>
    <relationshipName>Service_Funding</relationshipName>
    <type>Lookup</type>
</CustomField>