force-app/main/default/objects/GPMS_Service_Funding__c/fields/Special_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Special_Purpose__c</fullName>
    <description>Details type of special purpose.
Note: required for ACMPS integration</description>
    <label>Special Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homeless Specialisation</fullName>
            </value>
            <value>
                <fullName>Indigenous Specialisation</fullName>
            </value>
            <value>
                <fullName>Significant Refurbishment</fullName>
            </value>
            <value>
                <fullName>New Building</fullName>
            </value>
            <value>
                <fullName>Homeless or Indigenous Specialisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>