force-app/main/default/objects/GPMS_Service_Funding__c/fields/Special_Purpose_Overlap__c.field-meta.xml
<CustomField>
    <fullName>Special_Purpose_Overlap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Purpose Overlap</label>
    <type>Checkbox</type>
</CustomField>