force-app/main/default/objects/GPMS_Service_Funding__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Documents Start Date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>