force-app/main/default/objects/GPMS_Service_Funding__c/recordTypes/AN_ACC_Classification_Funding.recordType-meta.xml
<RecordType>
    <fullName>AN_ACC_Classification_Funding</fullName>
    <active>true</active>
    <description>AN ACC Classification</description>
    <label>AN ACC Classification</label>
</RecordType>