force-app/main/default/objects/GPMS_Service_Funding__c/recordTypes/Special_Purpose_Funding.recordType-meta.xml
<RecordType>
    <fullName>Special_Purpose_Funding</fullName>
    <active>true</active>
    <description>Special Purpose</description>
    <label>Special Purpose</label>
</RecordType>