force-app/main/default/objects/GPMS_Service_Funding__c/recordTypes/Specialist_Dementia_Care_Program_Funding.recordType-meta.xml
<RecordType>
    <fullName>Specialist_Dementia_Care_Program_Funding</fullName>
    <active>true</active>
    <description>Specialist Dementia Care Program</description>
    <label>Specialist Dementia Care Program</label>
</RecordType>