force-app/main/default/objects/GPMS_Service_Funding__c/validationRules/SF_AN_ACC_Base_Care_Tariff_checknull.validationRule-meta.xml
<ValidationRule>
    <fullName>SF_AN_ACC_Base_Care_Tariff_checknull</fullName>
    <active>true</active>
    <description>AN ACC Base Care Tariff cannot be left blank.</description>
    <errorConditionFormula>AND(ISPICKVAL(AN_ACC_Base_Care_Tariff__c,&quot;&quot;), RecordType.DeveloperName = &apos;AN_ACC_Classification_Funding&apos;)</errorConditionFormula>
    <errorDisplayField>AN_ACC_Base_Care_Tariff__c</errorDisplayField>
    <errorMessage>AN ACC Base Care Tariff cannot be left blank.</errorMessage>
</ValidationRule>