force-app/main/default/objects/GPMS_Service_Funding__c/validationRules/SF_Check_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>SF_Check_End_Date</fullName>
    <active>true</active>
    <description>Year must be between 2019-2035</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName=&quot;Specialist_Dementia_Care_Program_Funding&quot;,
OR(
End_Date__c&lt;  DATE(2019,1,1) ,
End_Date__c&gt;  DATE(2035,12,31)
)
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Year must be between 2019-2035</errorMessage>
</ValidationRule>