force-app/main/default/objects/GPMS_Service_Funding__c/validationRules/SF_Check_SpecialPurpose.validationRule-meta.xml
<ValidationRule>
    <fullName>SF_Check_SpecialPurpose</fullName>
    <active>true</active>
    <description>Cannot overlap with another Special Purpose type</description>
    <errorConditionFormula>Special_Purpose_Overlap__c</errorConditionFormula>
    <errorMessage>Cannot overlap with another Special Purpose type</errorMessage>
</ValidationRule>