force-app/main/default/objects/GPMS_Service_Funding__c/validationRules/SF_Check_Start_Date_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>SF_Check_Start_Date_Null</fullName>
    <active>true</active>
    <description>The Start Date cannot be left blank if the service record exists.</description>
    <errorConditionFormula>AND(NOT(ISBLANK( Service__c)),ISBLANK(Start_Date__c))</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date cannot  be left blank</errorMessage>
</ValidationRule>